--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@types/jsonwebtoken": "^9.0.7",
     "framer-motion": "^11.5.6",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.445.0",
     "nexios-http": "^1.1.20",
     "next": "14.2.13",
